changed dark mode to all black, added to footer and fixed logos

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,7 +33,8 @@ hr {
 }
 
 .darkswitch{
-    background: #292b2c;
+    /* background: #292b2c; */
+    background: #000000;
     color: #fff;
 }
 
@@ -41,9 +42,6 @@ hr {
     src: local("static/images/switch.png");
 }
 
-.darkimage{
-    src: local("static/images/darkswitch.png");
-}
 /* Body CSS */
 
 
